      expected. (Jonathan Lange, #332705)

    * ``bzr send`` now supports MH-E via ``emacsclient``. (Eric Gillespie)

  BUG FIXES:

    * Bazaar now gives a better message including the filename if it's
      unable to read a file in the working directory, for example because
      of a permission error.  (Martin Pool, #338653)

    * ``bzr send`` help is more specific about how to apply merge
      directives.  (Neil Martinsen-Burrell, #253470)

    * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
      than fetching trees and determining a delta itself. (Jelmer
      Vernooij, #315048)

    * ``bzr push`` to a smart server no longer causes "Revision
      {set([('null:',)])} not present ..." errors when the branch has
      multiple root revisions. (Andrew Bennetts, #317654)

    * ``bzr shelve`` now properly handle patches with no terminating newline.
      (Benoît PIERRE, #303569)

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

    * Export now handles files that are not present in the tree.
      (James Westby, #174539)

    * Fixed "sprout() got an unexpected keyword argument 'source_branch'"
      error branching from old repositories.
      (Martin Pool, #321695)

    * Make ``bzr push --quiet <non-local location>`` less chatty.
      (Kent Gibson, #221461)

    * Many Branch hooks would not fire with ``bzr://`` and ``bzr+ssh://``
      branches, and this was not noticed due to a bug in the test logic
      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

    * Restore the progress bar on Windows. We were disabling it when TERM
      wasn't set, but Windows doesn't set TERM. (Alexander Belchenko)

    * ``setup.py build_ext`` now gives a proper error when an extension
      fails to build. (John Arbash Meinel)

    * Under rare circumstances (aka nobody reported a bug about it), the ftp